--- a/package.json
+++ b/package.json
@@ -4,13 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node app.js"
+    "test": "mocha **/*.test.js",
+    "start": "node app.js",
+    "test-watch": "nodemon --exec npm test"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
     "hbs": "^4.0.1"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "expect": "^23.6.0",
+    "mocha": "^5.2.0",
+    "sinon": "^7.1.1",
+    "sinon-chai": "^3.2.0",
+    "supertest": "^3.3.0"
   }
 }
